# Car-Spare-Part-CRM

./: .env  .gitignore  README.md  main.py  packages.txt  pyproject.toml
apps/: __init__.py  routes.py
apps/action/: admin.py  models.py  routes.py  schemas.py  serializers.py
apps/base/: models.py  schemas.py
apps/company/: admin.py  models.py  routes.py  schemas.py
apps/computer/: admin.py  models.py
apps/computer/routes/: computer.py  display.py  gen.py  processor.py  ram.py  rom.py  schemes.py
apps/currency/: admin.py  models.py  routes.py  schemas.py
apps/customer/: admin.py  models.py  routes.py  schemas.py
apps/document/: admin.py  models.py  schemas.py
apps/initializer/: admin.py  models.py
apps/notes/: admin.py  models.py  routes.py  serializers.py
apps/permissions/: admin.py  models.py  routes.py  schemas.py  serializers.py
apps/product_manager/: admin.py  models.py  schemes.py
apps/product_manager/routes/: car_routes.py  category_routes.py  company_routes.py  doc_item_routes.py  store_routes.py  (+5 more)
apps/purchase/: admin.py  models.py  routes.py  schemas.py
apps/role_manager/: admin.py  models.py  role_serializers.py  schemas.py  serializers.py
apps/statistics/: product.py  profit.py  routes.py  sales_rate.py
apps/transaction/: admin.py  helpers.py  models.py  routes.py  schemas.py
apps/user/: admin.py  models.py  routes.py  schemas.py  serializers.py
config/: dashboard_security.py  database_config.py  initializer.py  security.py  settings.py
di/: db.py
utils/: get_pagination.py  pagination.py  python_core.py  response_type.py
(+13 files in other folders)
