[project]
name = "car-spare-part-crm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "databases[postgresql]>=0.9.0",
    "fastapi-pagination>=0.15.12",
    "fastapi[standard,standart]>=0.136.1",
    "itsdangerous>=2.2.0",
    "marshmallow>=4.3.0",
    "passlib>=1.7.4",
    "psycopg2>=2.9.12",
    "python-jose[cryptography]>=3.5.0",
    "pytz>=2026.1.post1",
    "sqladmin>=0.25.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]
